tests/let-bindings/structural-patterns/ill-typed/test-1-4.stella
language core;

extend with #let-bindings, #let-patterns, #structural-patterns, #tuples;

fn main(n : Nat) -> Nat {
  return
  	let y = {0, true} in
    if y then x else succ(x)
}
